Mon 25 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Fix same binary name issue on generate doc (omit doc for nib-cli)
	* Rename RELEASE.md HISTORY.md (due to naming similarity issue to README.md)
	* Introduce workspace for nib, nib-cli and nib-server

Sun 24 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.5

Sat 23 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add syntax highlight support for code block
	* Refactor HTML rendiring

Mon 18 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.4
	* Add Makefile into exclude
	* Fix embedded default theme rendering
	* Update style for default theme

Sun 17 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove unnecessary CODEOWNERS

Fri 15 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.3
	* Add nested directory support

Sun 10 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove unnecessary renders and hard-coded HTML tags in wirters
	* Remove unnecessary renders and hard-coded HTML tags in wirters
	* Bump version to 0.0.2
	* Add config.toml support

Fri 01 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial release 0.0.1

Thu 30 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Name this project as Nib

Wed 29 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add integration tests for server
	* Add static files support
	* Add theme directory

Thu 23 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add a HTML renderer function

Sun 19 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)