@@ -1,0 +1,83 @@
+stages:
+  - verify
+  - test
+  - build
+
+.vet-tools: &vet-tools
+  image: grauwoelfchen/rust-vet-tools:stable
+  except:
+    - tags
+
+err:
+  stage: verify
+  <<: *vet-tools
+  before_script:
+    - rustc --version
+    - cargo --version
+    - mkdir -p .git/hooks
+  script:
+    - make verify:error
+
+fmt:
+  stage: verify
+  <<: *vet-tools
+  before_script:
+    - rustc --version
+    - cargo --version
+    - cargo fmt --version
+    - mkdir -p .git/hooks
+  script:
+    - make verify:format
+
+lint:
+  stage: verify
+  <<: *vet-tools
+  before_script:
+    - rustc --version
+    - cargo --version
+    - cargo clippy --version
+    - mkdir -p .git/hooks
+  script:
+    - make verify:lint
+
+test:
+  stage: test
+  <<: *vet-tools
+  before_script:
+    - rustc --version
+    - cargo --version
+    - mkdir -p .git/hooks
+  script:
+    - make test
+  only:
+    - master
+    - merge_requests
+
+build:
+  stage: build
+  image: grauwoelfchen/rust:stable
+  before_script:
+    - rustc --version
+    - cargo --version
+    - mkdir -p .git/hooks
+  script:
+    - make build:debug
+  cache:
+    untracked: true
+  only:
+    - master
+    - merge_requests
+
+release:
+  stage: build
+  image: grauwoelfchen/rust:stable
+  before_script:
+    - rustc --version
+    - cargo --version
+    - mkdir -p .git/hooks
+  script:
+    - make build:release
+  cache:
+    untracked: true
+  only:
+    - master
