@@ -1,4 +1,5 @@
 Mon 25 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Setup CI (.gitlab-ci.yml)
 	* Fix same binary name issue on generate doc (omit doc for nib-cli)
 	* Rename RELEASE.md HISTORY.md (due to naming similarity issue to README.md)
 	* Introduce workspace for nib, nib-cli and nib-server
